[package]
name = "shilipo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "shilipo"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.52"
maplit = "1.0.2"
nom = "7.1.0"
pretty_assertions = "1.0.0"
thiserror = "1.0.30"
tracing = "0.1.29"
tracing-subscriber = "0.3.6"
