[package]
name = "shilipo"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "shilipo"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.52"
bytemuck = { version = "1.7.3", features = ["derive"] }
image = "0.23.14"
lazy_static = "1.4.0"
maplit = "1.0.2"
nom = "7.1.0"
pretty_assertions = "1.0.0"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.6"
wgpu = "0.12.0"
winit = "0.26.1"
